--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,4 +131,4 @@ jobs:
       - uses: bufbuild/buf-setup-action@v0.3.1
       - uses: bufbuild/buf-breaking-action@v0.4.0
         with:
-          against: 'https://github.com/0chain/blobber.git#branch=master'
+          against: 'https://github.com/0chain/blobber.git#branch=${{ github.base_ref }}'
