--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,20 @@ jobs:
       - uses: actions/checkout@v2
       - uses: satackey/action-docker-layer-caching@v0.0.11
         continue-on-error: true
+
+      # git clone gosdk with same branch
+      - name: Set GITHUB_ENV
+        run: |
+          echo "BRANCH=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
+          echo "GOSDK=$(echo $(dirname $(pwd)))/gosdk" >> $GITHUB_ENV
+          echo "TAG=$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//-/g' )" >> $GITHUB_ENV
+      - name: Clone gosdk
+        run: |
+          [ -d $GOSDK ] && rm -rf $GOSDK
+          git clone https://github.com/0chain/gosdk.git $GOSDK
+          cd $GOSDK
+          git checkout $BRANCH
+
       - name: Build test environment and run tests
         run: |
           sed -i '/#expose_ci_port/c\    ports:\n      - "5432:5432"' ./docker.local/b0docker-compose.yml
@@ -40,6 +54,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      # git clone gosdk with same branch
+      - name: Set GITHUB_ENV
+        run: |
+          echo "BRANCH=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
+          echo "GOSDK=$(echo $(dirname $(pwd)))/gosdk" >> $GITHUB_ENV
+          echo "TAG=$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//-/g' )" >> $GITHUB_ENV
+      - name: Clone gosdk
+        run: |
+          [ -d $GOSDK ] && rm -rf $GOSDK
+          git clone https://github.com/0chain/gosdk.git $GOSDK
+          cd $GOSDK
+          git checkout $BRANCH
+
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
         with:
@@ -53,6 +81,8 @@ jobs:
         uses: actions/checkout@master
         with:
           fetch-depth: 1
+
+      
       - name: setup golang
         if: success()
         uses: actions/setup-go@v2
