--- a/buf.yaml
+++ b/buf.yaml
@@ -1,5 +1,7 @@
 version: v1beta1
 name: buf.build/0chain/blobber
+deps:
+  - buf.build/beta/googleapis
 build:
   roots:
     - code/go/0chain.net/blobbercore/blobbergrpc/proto
