--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,10 +19,11 @@ jobs:
     runs-on: ubuntu-20.04
     timeout-minutes: 30
     steps:
+  
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.13.x
+          go-version: 1.16.x
       - uses: actions/checkout@v2
       - uses: satackey/action-docker-layer-caching@v0.0.11
         continue-on-error: true
@@ -56,6 +57,10 @@ jobs:
     name: lint
     runs-on: ubuntu-latest
     steps:
+      - name: Setup go 1.16
+        uses: actions/setup-go@v2
+        with:
+          go-version: '1.16' # The Go version to download (if necessary) and use.
       - uses: actions/checkout@v2
 
       # git clone gosdk with same branch
@@ -85,12 +90,11 @@ jobs:
         with:
           fetch-depth: 1
 
-      
       - name: setup golang
         if: success()
         uses: actions/setup-go@v2
         with:
-          go-version: 1.13.x
+          go-version: 1.16.x
       - name: run buf commands
         if: success()
         run: make local
