--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,13 +17,14 @@ env:
 jobs:
   integration_test:
     runs-on: ubuntu-20.04
-    timeout-minutes: 30
+    timeout-minutes: 40
     steps:
   
-      - name: Install Go
+      - name: Setup go 1.16
         uses: actions/setup-go@v2
         with:
-          go-version: 1.16.x
+          go-version: '1.16' # The Go version to download (if necessary) and use.
+          
       - uses: actions/checkout@v2
       - uses: satackey/action-docker-layer-caching@v0.0.11
         continue-on-error: true
