--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -10,16 +10,28 @@ jobs:
   benchmark:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+ 
       - name: Setup go 1.16
         uses: actions/setup-go@v2
         with:
           go-version: '1.16' # The Go version to download (if necessary) and use.
-      # - name: Set GITHUB_ENV
-      #   run: |
-      #       echo "BRANCH=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
-      #       echo "GOSDK=$(echo $(dirname $(pwd)))/gosdk" >> $GITHUB_ENV
-      #       echo "TAG=$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//-/g' )" >> $GITHUB_ENV
+
+
+      - name: Set GITHUB_ENV
+        run: |
+            echo "BRANCH=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
+            echo "GOSDK=$(echo $(dirname $(pwd)))/gosdk" >> $GITHUB_ENV
+            echo "TAG=$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//-/g' )" >> $GITHUB_ENV
+
+      - name: Clone blobber
+        uses: actions/checkout@v2
+
+      - name: Clone gosdk
+        run: |
+          [ -d $GOSDK ] && rm -rf $GOSDK
+          git clone https://github.com/0chain/gosdk.git $GOSDK
+          cd $GOSDK
+          git checkout $BRANCH
 
       - name: Run benchmark
         run: go test -tags bn256 -benchmem -benchtime=5s -run="BenchmarkUploadFile*" -bench="BenchmarkUploadFile*"   ./... | tee benchmark.txt
