--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,13 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: '1.16' # The Go version to download (if necessary) and use.
-      - run: go version    
+      - name: Setup go for root
+        run: |
+          go version  
+          sudo go version
+          gobin=$(which go)
+          echo $gobin  
+          sudo go version
 
       - name: Clone Blobber
         uses: actions/checkout@v2
