--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -34,12 +34,12 @@ jobs:
       - name: Clone blobber
         uses: actions/checkout@v2      
 
-      - name: Clone gosdk
-        run: |
-          [ -d $GOSDK ] && rm -rf $GOSDK
-          git clone https://github.com/0chain/gosdk.git $GOSDK
-          cd $GOSDK
-          git checkout $BRANCH
+      # - name: Clone gosdk
+      #   run: |
+      #     [ -d $GOSDK ] && rm -rf $GOSDK
+      #     git clone https://github.com/0chain/gosdk.git $GOSDK
+      #     cd $GOSDK
+      #     git checkout $BRANCH
         
   
       - name: Build blobber_base
@@ -69,12 +69,12 @@ jobs:
       - name: Clone blobber
         uses: actions/checkout@v2
 
-      - name: Clone gosdk
-        run: |
-          [ -d $GOSDK ] && rm -rf $GOSDK
-          git clone https://github.com/0chain/gosdk.git $GOSDK
-          cd $GOSDK
-          git checkout $BRANCH
+      # - name: Clone gosdk
+      #   run: |
+      #     [ -d $GOSDK ] && rm -rf $GOSDK
+      #     git clone https://github.com/0chain/gosdk.git $GOSDK
+      #     cd $GOSDK
+      #     git checkout $BRANCH
 
       - name: Download blobber_base
         uses: actions/download-artifact@v2
@@ -151,12 +151,12 @@ jobs:
       - name: Clone blobber
         uses: actions/checkout@v2
 
-      - name: Clone gosdk
-        run: |
-          [ -d $GOSDK ] && rm -rf $GOSDK
-          git clone https://github.com/0chain/gosdk.git $GOSDK
-          cd $GOSDK
-          git checkout $BRANCH
+      # - name: Clone gosdk
+      #   run: |
+      #     [ -d $GOSDK ] && rm -rf $GOSDK
+      #     git clone https://github.com/0chain/gosdk.git $GOSDK
+      #     cd $GOSDK
+      #     git checkout $BRANCH
 
       - name: Download blobber_base
         uses: actions/download-artifact@v2
