--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,7 @@ on:
 jobs:
   unit_tests:
     name: "Unit Tests"
-    runs-on: [self-hosted, build]
+    runs-on: [self-hosted,conductor-test]
     steps:
       - name: Setup go 1.17
         uses: actions/setup-go@v2
@@ -72,7 +72,7 @@ jobs:
 
   golangci:
     name: lint
-    runs-on: [self-hosted, build]
+    runs-on:  [self-hosted,conductor-test]
     steps:
       - name: Setup go 1.17
         uses: actions/setup-go@v2
@@ -87,7 +87,7 @@ jobs:
           args: --timeout=2m0s
 
   buf-build:
-    runs-on: [self-hosted, build]
+    runs-on: [self-hosted,conductor-test]
     steps:
       - name: Check out code
         uses: actions/checkout@master
