--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,9 +13,29 @@ on:
   pull_request:
 
 jobs:
+  lint:
+      name: lint
+      runs-on:  [self-hosted,conductor-test]
+      steps:
+        - name: Setup go 1.17
+          uses: actions/setup-go@v2
+          with:
+            go-version: '1.17' # The Go version to download (if necessary) and use.
+        - uses: actions/checkout@v2
+
+        - name: golangci-lint
+          uses: golangci/golangci-lint-action@v2
+          with:
+            version: latest
+            args: --timeout=2m0s
+        - name: buf-lint
+          if: success()
+          run: make local
+
   unit_tests:
     name: "Unit Tests"
     runs-on: [self-hosted,conductor-test]
+    needs: lint
     steps:
       - name: Setup go 1.17
         uses: actions/setup-go@v2
@@ -36,7 +56,6 @@ jobs:
     runs-on: [ubuntu-20.04]
     timeout-minutes: 40
     steps:
-  
       - name: Setup go 1.17
         uses: actions/setup-go@v2
         with:
@@ -68,36 +87,3 @@ jobs:
           go17=$(which go)
           root=$(pwd)
           sudo CGO_ENABLED=1 root=$root integration=1 $go17 test -tags bn256  ./...
-
-  golangci:
-    name: lint
-    runs-on:  [self-hosted,conductor-test]
-    steps:
-      - name: Setup go 1.17
-        uses: actions/setup-go@v2
-        with:
-          go-version: '1.17' # The Go version to download (if necessary) and use.
-      - uses: actions/checkout@v2
-
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v2
-        with:
-          version: latest
-          args: --timeout=2m0s
-
-  buf-build:
-    runs-on: [self-hosted,conductor-test]
-    steps:
-      - name: Check out code
-        uses: actions/checkout@master
-        with:
-          fetch-depth: 1
-
-      - name: setup golang
-        if: success()
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.17.x
-      - name: run buf commands
-        if: success()
-        run: make local
