--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,29 +13,8 @@ on:
   pull_request:
 
 jobs:
-  lint:
-      name: lint
-      runs-on:  [self-hosted,conductor-test]
-      steps:
-        - name: Setup go 1.17
-          uses: actions/setup-go@v2
-          with:
-            go-version: '1.17' # The Go version to download (if necessary) and use.
-        - uses: actions/checkout@v2
-
-        - name: golangci-lint
-          uses: golangci/golangci-lint-action@v2
-          with:
-            version: latest
-            args: --timeout=2m0s
-        - name: buf-lint
-          if: success()
-          run: make local
-
-  unit_tests:
-    name: "Unit Tests"
+  unit-tests:
     runs-on: [self-hosted,conductor-test]
-    needs: lint
     steps:
       - name: Setup go 1.17
         uses: actions/setup-go@v2
@@ -45,14 +24,22 @@ jobs:
       - name: Clone blobber
         uses: actions/checkout@v2
 
+      - name: Golangci-lint
+          uses: golangci/golangci-lint-action@v2
+          with:
+            version: latest
+            args: --timeout=2m0s
+      - name: Buf-lint
+        if: success()
+        run: make local
+
       - name: Run tests
         run: |
           cd $GITHUB_WORKSPACE/code/go/0chain.net/ 
           CGO_ENABLED=1 go test -tags bn256 -race -coverprofile=coverage.txt -covermode=atomic ./...
 
-  integration_test:
-    name: "Integration Tests"
-    needs: unit_tests
+  integration-tests:
+    needs: unit-tests
     runs-on: [ubuntu-20.04]
     timeout-minutes: 40
     steps:
