--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Set GITHUB_ENV
         run: |
 
-          if [[ "${{github.ref}}" == "refs/pull/*" ]]; then
+          if [[ "${{github.ref}}" == refs/pull/* ]]; then
             tag=${GITHUB_REF/\/merge/}
             echo "TAG=$(echo ${tag:10})" >> $GITHUB_ENV
           else
