--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,7 @@ on:
 
 jobs:
   unit-tests:
+    name: Unit Tests
     runs-on: [self-hosted,conductor-test]
     steps:
       - name: Setup go 1.17
@@ -40,6 +41,7 @@ jobs:
           CGO_ENABLED=1 go test -tags bn256 -race -coverprofile=coverage.txt -covermode=atomic ./...
 
   integration-tests:
+    name: Integration Tests
     needs: unit-tests
     runs-on: [ubuntu-20.04]
     timeout-minutes: 40
