--- a/docker.local/https.docker-compose.yml
+++ b/docker.local/https.docker-compose.yml
@@ -61,6 +61,7 @@ services:
       - ./keys_config:/blobber/keysconfig
     ports:
       - "505${BLOBBER}:505${BLOBBER}"
+      - "506${BLOBBER}:506${BLOBBER}"
       - "703${BLOBBER}:703${BLOBBER}"
     labels:
       zchain: "blobber"
