--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -1,5 +1,9 @@
 name: Benchmark tests
 
+concurrency:
+  group: "benchmark-${{ github.ref }}"
+  cancel-in-progress: true
+
 on:
   push:
     branches: [ master, staging ]
