--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -9,9 +9,16 @@ on:
     branches:
       - staging
     tags: 
+      - 'v*.*.*'
+      
   pull_request:
 
   workflow_dispatch:
+    inputs:
+      tag:
+        description: 'build and publish blobber/validator images on tag:'
+        default: ''
+        required: true
 
 
 env:
