--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -31,7 +31,7 @@ jobs:
 
           echo "BRANCH=$([ -z '${{ github.event.pull_request.head.sha }}' ] && echo ${GITHUB_REF#refs/*/} || echo $GITHUB_HEAD_REF)" >> $GITHUB_ENV
           echo "SHA=$([ -z '${{ github.event.pull_request.head.sha }}' ] && echo $GITHUB_SHA || echo '${{ github.event.pull_request.head.sha }}')" >> $GITHUB_ENV
-
+          
       - name: Setup go 1.17
         uses: actions/setup-go@v2
         with:
@@ -49,10 +49,14 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Build blobber_base
-        run: ./docker.local/bin/build.base.sh
+        run: |
+          export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64"
+          ./docker.local/bin/build.base.sh
 
       - name: Build blobber
-        run: ./docker.local/bin/build.blobber.sh
+        run: |
+          export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64"
+          ./docker.local/bin/build.blobber.sh
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -100,10 +104,14 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Build blobber_base
-        run: ./docker.local/bin/build.base.sh
+        run: |
+          export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64"
+          ./docker.local/bin/build.base.sh
 
       - name: Build validator
-        run: ./docker.local/bin/build.validator.sh
+        run: |
+          export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64"
+          ./docker.local/bin/build.validator.sh
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
