--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -51,11 +51,11 @@ jobs:
       - name: Build blobber_base
         run: |
           export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64"
+          docker buildx create --use
           ./docker.local/bin/build.base.sh
 
       - name: Build blobber
         run: |
-          export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64"
           ./docker.local/bin/build.blobber.sh
 
       - name: Login to Docker Hub
@@ -106,11 +106,11 @@ jobs:
       - name: Build blobber_base
         run: |
           export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64"
+          docker buildx create --use
           ./docker.local/bin/build.base.sh
 
       - name: Build validator
         run: |
-          export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64"
           ./docker.local/bin/build.validator.sh
 
       - name: Login to Docker Hub
