--- a/docker.local/b0docker-compose-debug.yml
+++ b/docker.local/b0docker-compose-debug.yml
@@ -55,6 +55,7 @@ services:
     links:
       - validator:validator
     volumes:
+      -  /mnt/:/mnt
       - ../config:/blobber/config
       - ./blobber${BLOBBER}/files:/blobber/files
       - ./blobber${BLOBBER}/data:/blobber/data
