--- a/docker.local/b0docker-compose.yml
+++ b/docker.local/b0docker-compose.yml
@@ -54,6 +54,7 @@ services:
     links:
       - validator:validator
     volumes:
+      -  /mnt/:/mnt
       - ../config:/blobber/config
       - ./blobber${BLOBBER}/files:/blobber/files
       - ./blobber${BLOBBER}/data:/blobber/data
