--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -51,7 +51,8 @@ jobs:
       - name: Build blobber_base
         run: |
           export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64"
-          docker buildx create --use
+          docker buildx create --name blobber_buildx
+          docker buildx use blobber_buildx
           ./docker.local/bin/build.base.sh
 
       - name: Build blobber
