--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,7 +5,7 @@ concurrency:
   cancel-in-progress: true
 
 on:
-  push: 
+  push:
     branches:
       - master
       - staging
@@ -15,7 +15,7 @@ on:
 jobs:
   linter:
     name: Lints
-    runs-on: [self-hosted,docker-builds]
+    runs-on: [self-hosted,arc-runner]
     steps:
       - name: Setup go
         uses: actions/setup-go@v3
@@ -28,6 +28,12 @@ jobs:
       - name: Buf-lint
         if: success()
         run: make local
+
+      - name: Build Base
+        run: ./docker.local/bin/build.base.sh
+
+      - name: Check swagger generation
+        run: docker.local/bin/test.swagger.sh
 
       - name: Golangci-lint
         uses: golangci/golangci-lint-action@v3
@@ -53,7 +59,7 @@ jobs:
 
       - name: Run tests
         run: |
-          cd $GITHUB_WORKSPACE/code/go/0chain.net/ 
+          cd $GITHUB_WORKSPACE/code/go/0chain.net/
           CGO_ENABLED=1 go test -tags bn256 -race -coverprofile=coverage.txt -covermode=atomic ./...
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
