--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,6 +25,11 @@ jobs:
       - name: Clone blobber
         uses: actions/checkout@v2
 
+      - name: Install Packages
+        run: |
+          sudo apt-get update
+          sudo apt-get -y install build-essential nghttp2 libnghttp2-dev libssl-dev
+
       - name: Buf-lint
         if: success()
         run: make local
