--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Make Command
-        run: sudo apt install && sudo apt install build-essential -y
+        run: |
+          sudo apt-get update
+          sudo apt-get -y install build-essential nghttp2 libnghttp2-dev libssl-dev
 
       - name: Buf-lint
         if: success()
