--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -62,6 +62,11 @@ jobs:
       - name: Clone blobber
         uses: actions/checkout@v2
 
+      - name: Install Make Command
+        run: |
+          sudo apt-get update
+          sudo apt-get -y install build-essential nghttp2 libnghttp2-dev libssl-dev wget
+
       - name: Run tests
         run: |
           cd $GITHUB_WORKSPACE/code/go/0chain.net/
