--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,6 +25,11 @@ jobs:
       - name: Clone blobber
         uses: actions/checkout@v2
 
+      - name: Install Make Command
+        run: |
+          sudo apt-get update
+          sudo apt-get -y install build-essential nghttp2 libnghttp2-dev libssl-dev wget
+
       - name: Buf-lint
         if: success()
         run: make local
@@ -47,7 +52,7 @@ jobs:
 
   unit-tests:
     name: Unit Tests
-    runs-on: [self-hosted,docker-builds]
+    runs-on: [self-hosted,arc-runner]
     steps:
       - name: Setup go
         uses: actions/setup-go@v3
@@ -56,6 +61,11 @@ jobs:
 
       - name: Clone blobber
         uses: actions/checkout@v2
+
+      - name: Install Make Command
+        run: |
+          sudo apt-get update
+          sudo apt-get -y install build-essential nghttp2 libnghttp2-dev libssl-dev wget
 
       - name: Run tests
         run: |
